# damavand

./: .gitignore  .test.sh  CHANGELOG.md  README.md  devenv.nix  pyproject.toml  requirements.txt
docs/assets/: damavand-logo.psd
examples/advance-aws-llm-with-dspy/: __main__.py  applications.py
examples/advance-llm-with-dspy/: Pulumi.yaml  controller.py  requirements.txt
examples/aws-llm-with-openai-client/: __main__.py  requirements.txt
examples/aws-llm-with-simple-requests/: Pulumi.yaml  __main__.py  requirements.txt
examples/aws-serverless-python-resources/: Dockerfile  Pulumi.yaml  __main__.py  requirements.txt
examples/llm/: __main__.py  requirements.txt
examples/llm-resources/: Pulumi.yaml  __main__.py
examples/llm-with-openai-client/: Pulumi.yaml
examples/sparkle/: Pulumi.yaml  __main__.py  build.sh  requirements.txt  setup.py
examples/sparkle/applications/: orders.py  products.py
src/: Pulumi.yaml  __main__.py
src/damavand/: core.py  environment.py  errors.py  factories.py  stage.py  utils.py
src/damavand/base/: factory.py  resource.py
src/damavand/base/controllers/: __init__.py  base_controller.py  llm.py  object_storage.py  spark.py
src/damavand/cloud/: provider.py
src/damavand/cloud/aws/: __init__.py  bucket.py  flask_server.py  object_storage.py  spark.py
src/damavand/cloud/aws/controllers/: __init__.py  llm.py  object_storage.py  spark.py
src/damavand/cloud/aws/deploy/: bucket.py
src/damavand/cloud/aws/resources/: __init__.py  aws_services.py  budget_component.py  glue_component.py  lambda_component.py  llm_app_component.py  serverless_python_component.py  vllm_component.py
src/damavand/cloud/azure/controllers/: __init__.py  spark.py
src/damavand/cloud/azure/resources/: __init__.py  synapse_component.py
src/damavand/controllers/: __init__.py  object_storage.py  spark.py
src/damavand/resource/: __init__.py  bucket.py  flask_server.py  object_storage.py  resource.py  spark.py
src/damavand/sparkle/: core.py  data_reader.py  data_writer.py  handlers.py  models.py
tests/: test_enviroment.py  test_utils.py
tests/base/: test_application_controllers.py  test_spark.py
tests/clouds/aws/: test_aws_bucket.py  test_aws_object_storage.py  test_aws_spark.py
tests/clouds/aws/controllers/: test_aws_object_storage.py  test_aws_spark.py
tests/clouds/aws/resources/: test_glue_component.py  test_vllm_component.py
tests/controllers/: test_application_controllers.py  test_spark.py
tests/resources/: test_resource.py
