[project]
name = "damavand"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Kiarash Kiani", email = "kiarash@datachef.co"},
]
dependencies = [
    "cdktf>=0.20.8",
    "rich>=13.7.1",
    "cdktf-cdktf-provider-aws>=19.27.0",
    "cdktf-cdktf-provider-azurerm>=12.25.0",
    "boto3>=1.34.147",
    "psutil>=6.0.0",
    "flask>=3.0.3",
]
requires-python = "==3.10.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
