[project]
name = "damavand"
description = "Default template for PDM package"
authors = [
    {name = "Kiarash Kiani", email = "kiarash@datachef.co"},
]
dependencies = [
    "cdktf>=0.20.8",
    "rich>=13.7.1",
    "cdktf-cdktf-provider-aws>=19.27.0",
    "cdktf-cdktf-provider-azurerm>=12.25.0",
    "boto3>=1.34.147",
    "psutil>=6.0.0",
    "flask>=3.0.3",
]
requires-python = ">=3.11.0"
readme = "README.md"
license = {text = "MPL-2.0"}
dynamic = ["version"]


[tool.pdm]
distribution = false
path = "src/damavand/__init__.py"

[tool.pdm.version]
source = "scm"

[tool.pdm.dev-dependencies]
dev = [
    "Commitizen>=3.28.0",
    "pdbpp>=0.10.3",
]
[tool.commitizen]
version = "1.0.0"
update_changelog_on_bump = true
version_provider = "scm"
tag_format = "v$major.$minor.$patch$prerelease"
version_files = [
    "src/damavand/__init__.py"
]
