[project]
name = "damavand"
description = "Default template for PDM package"
authors = [
    {name = "Kiarash Kiani", email = "kiarash@datachef.co"},
]
dependencies = [
    "rich>=13.7.1",
    "boto3>=1.34.147",
    "psutil>=6.0.0",
    "flask>=3.0.3",
    "pulumi>=3.127.0",
    "pulumi-aws>=6.47.0",
    "pulumi-azure-native>=2.51.0",
    "pyspark>=3.5.1",
]
requires-python = ">=3.11.0"
readme = "README.md"
license = {text = "MPL-2.0"}
dynamic = ["version"]


[tool.pdm]
distribution = false
path = "src/damavand/__init__.py"

[tool.pdm.version]
source = "scm"

[tool.pdm.dev-dependencies]
dev = [
    "Commitizen>=3.28.0",
    "pdbpp>=0.10.3",
    "mypy>=1.11.0",
    "boto3-stubs>=1.34.149",
    "pytest>=8.3.2",
    "pytest-coverage>=0.0",
    "pyright>=1.1.374",
    "moto>=5.0.11",
]
[tool.commitizen]
version = "1.0.0"
update_changelog_on_bump = true
version_provider = "scm"
tag_format = "v$major.$minor.$patch$prerelease"
version_files = [
    "src/damavand/__init__.py"
]

[tool.mypy]
no_site_packages = true
ignore_missing_imports = true
